<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <ImageButton
            android:layout_width="107dp"
            android:layout_height="97dp" app:srcCompat="@android:drawable/btn_star_big_off"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="103dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="152dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="152dp"
            android:layout_marginBottom="531dp"
            android:contentDescription="@string/favouriteselectionbutton"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/favouriteButton"/>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="143dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="51dp"
            app:layout_constraintTop_toBottomOf="@+id/favouriteButton" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="209dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/departure"
                    android:layout_width="199dp"
                    android:layout_height="wrap_content" android:id="@+id/textView5"/>
            <TextView
                    android:text="@string/time"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content" android:id="@+id/textView4"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/route"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content" android:id="@+id/textView6"/>
            <TextView
                    android:text="@string/bud"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content" android:id="@+id/textView7"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/airline"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content" android:id="@+id/textView8"/>
            <TextView
                    android:text="@string/wzz"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content" android:id="@+id/textView9"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/flightnumber"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content" android:id="@+id/textView10"/>
            <TextView
                    android:text="@string/w6_6534"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content" android:id="@+id/textView11"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>